--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -3,7 +3,7 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
-        <property name="context-root" value="Explorando-Marte-Server"/>
         <property name="java-output-path" value="/Explorando-Marte-Server/build/classes"/>
+        <property name="context-root" value="ExplorandoMarte"/>
     </wb-module>
 </project-modules>
